<resources>
    <string name="app_name" translatable="false">Ecommerce</string>
    <string name="auth_welcome_msg">Welcome to E-Commerce</string>
    <string name="sign_in_msg">Sign in to continue</string>
    <string name="enter_your_e_mail">Your Email</string>
    <string name="enter_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_a_account">Don’t have a account?</string>
    <string name="register">Register</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="google_sign_in_field_msg">Google sign in failed, please retry again later.</string>
    <string name="generic_err_msg">Error please try again later.</string>
    <string name="signup_msg">Let’s Get Started</string>
    <string name="create_an_new_account_msg">Create an new account</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="password_again">Password again</string>
    <string name="have_a_account">have a account?</string>
    <string name="reset_password_msg">Enter your email to send an email to reset your password</string>
    <string name="send">send</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="offer">Offer</string>
    <string name="account">Account</string>
    <string name="search_products">Search Products</string>
    <string name="category">Category</string>
    <string name="more_category">More Category</string>
    <string name="off">off</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="see_more">See More</string>
    <string name="please_select_your_country">Please select your country</string>

</resources>