<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_icon" />

            <TextView
                style="@style/LargeTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/signup_msg" />

            <TextView
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_an_new_account_msg" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_full_name"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawableStart="@drawable/ic_mail"
                android:hint="@string/full_name"
                android:inputType="text" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mail"
                android:hint="@string/enter_your_e_mail"
                android:inputType="textEmailAddress" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password_again"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password_again"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_register"
                style="@style/PrimaryButtonStyle"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/SmallTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_a_account" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btn_go_to_sign_in_screen"
                    style="@style/MediumTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/sign_in" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>