<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="com.hamza.ecommerce.ui.auth.viewmodel.ForgetPasswordViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <View
                android:layout_width="80dp"
                android:layout_height="4dp"
                android:layout_margin="16dp"
                android:background="@color/neutral_grey" />

            <TextView
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/reset_password_msg" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawableStart="@drawable/ic_mail"
                android:hint="@string/enter_your_e_mail"
                android:inputType="textEmailAddress"
                android:text="@={viewmodel.email}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_sign_in"
                style="@style/PrimaryButtonStyle"
                android:layout_marginTop="16dp"
                android:text="@string/send"
                android:onClickListener="@{() -> viewmodel.resetPassword()}" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>